--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,6 @@
     "name": "kinvey-rest-php",
     "version": "1.0",
     "require": {
-        "php": ">=5.3.0",
+        "php": ">=5.3.0"
     }
 }
