--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "kinvey/kinvey-rest-php",
+    "name": "kinvey-rest-php/kinvey-rest-php",
     "version": "1.0",
     "require": {
         "php": ">=5.3.0"
